--- a/client/views/surveys/surveys.less
+++ b/client/views/surveys/surveys.less
@@ -1,5 +1,33 @@
-#valueradios {
-  padding: 20px;
+.form{
+  display: inline-block;
+  vertical-align: top;
+  width: 250px;
+  border: 1px solid #111111;
+  border-radius: 5px;
+  margin: 20px;
+  background-color: #DDDDDD;
+
+  button{
+    position: relative;
+    bottom: 2px;
+    text-align: center;
+  }
+
+}
+
+.scores{
+  td{
+    width: 163px;
+    border: #dddddd;
+    background-color: #f9f9f9;
+  }
+  td:hover{
+    background-color: rgba(112, 111, 111, 0.42);
+  }
+}
+
+.head{
+  font-weight: bold;
 }
 
 .radio {
