--- a/client/index.jade
+++ b/client/index.jade
@@ -33,6 +33,7 @@ html(ng-app='collectivist-app', lang='en')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
     script(src='/views/surveys/surveys.js')
+    script(src='/views/about/about.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/survey.js')
     script(src='/components/factories/user.js')
