--- a/client/index.less
+++ b/client/index.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates);
+
 // http://clrs.cc/
 
 @NAVY:    #001F3F;
@@ -18,9 +20,59 @@
 @SILVER:  #DDDDDD;
 
 body{
-  background-color: @SILVER;
+  background-color: #fcfcfc;
+  background-image: url(http://www.transparenttextures.com/patterns/45-degree-fabric-dark.png);
 }
 
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.5;
+  color: inherit;
+}
+
+.jumbotron{
+  height: 800px;
+  background-color: white;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.container .jumbotron {
+  padding-right: 60px;
+  padding-left: 60px;
+  margin-top: 100px;
+}
+
+.info{
+  font-size: 20px;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #428bca;
+  border-color: #357ebd;
+  margin-top: 10px;
+}
+.jumbotron p {
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+.navbar-brand, .navbar > .container-fluid .navbar-brand {
+  margin-left: -15px;
+  font-size: 40px;
+  font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.navbar-default {
+  background-color: rgba(238, 238, 238, 0.89);
+  border-color: #e7e7e7;
+}
+
+.tagline{
+  font-family: 'Montserrat Alternates', sans-serif;
+}
 input.ng-invalid, select.ng-invalid{
   background-color: @GRAY;
 }
