--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,4 +1,4 @@
-.navbar.navbar-default(role='navigation', ng-controller='NavCtrl')
+.navbar.navbar-default.navbar-fixed-top(role='navigation', ng-controller='NavCtrl')
   .container
     .navbar-header
       button.navbar-toggle(data-toggle='collapse', data-target='#bs-navbar-collapse')
@@ -15,7 +15,6 @@
         li: a(href='/#/login') Login
       ul.nav.navbar-nav.navbar-right(ng-show='email')
         li: a(href='/#/') Home
-        li: a(href='/#/about') About
         li: a(href='/#/surveys') Surveys
         li: a(href='/#/logout') {{email}}
 
