--- a/client/index.jade
+++ b/client/index.jade
@@ -32,9 +32,13 @@ html(ng-app='collectivist-app', lang='en')
     script(src='/views/register/register.js')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
+    script(src='/views/dashboard/dashboard.js')
     script(src='/views/surveys/surveys.js')
+    script(src='/views/results/results.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/survey.js')
+    script(src='/components/factories/results.js')
+    script(src='/components/factories/dashboard.js')
     script(src='/components/factories/user.js')
     script(src='/components/factories/http-interceptor.js')
 
