--- a/client/nav.jade
+++ b/client/nav.jade
@@ -15,6 +15,6 @@
         li: a(href='/#/login') Login
       ul.nav.navbar-nav.navbar-right(ng-show='email')
         li: a(href='/#/') Home
-        li: a(href='/#/surveys') Surveys
+        li: a(href='/#/dashboard') Dashboard
         li: a(href='/#/logout') {{email}}
 
