--- a/client/index.less
+++ b/client/index.less
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .jumbotron{
-  height: 800px;
+  height: 850px;
   background-color: white;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -63,6 +63,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-left: -15px;
   font-size: 40px;
   font-family: 'Montserrat Alternates', sans-serif;
+}
+.step{
+  border: 3px solid black;
+  height: 300px;
+  border-radius: 10px;
+  background-color: #B9D9F8;
+  width: 300px;
+  margin: 20px;
 }
 
 .navbar-default {
