--- a/client/index.less
+++ b/client/index.less
@@ -64,13 +64,14 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-size: 40px;
   font-family: 'Montserrat Alternates', sans-serif;
 }
-.step{
+.panel{
   border: 3px solid black;
   height: 300px;
-  border-radius: 10px;
-  background-color: #B9D9F8;
+  border-radius: 5px;
+  background-color: #D3E8F6;
   width: 300px;
   margin: 20px;
+  padding: 10px;
 }
 
 .navbar-default {
