--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -11,17 +11,22 @@
 
         p In each survey, we ask you for TWO answers for every ONE question: What your opinion is, and what you think the average response is.  This feature enables us to give you accurate results of where you personally stand on a variety of topics, and how accurate you are in guessing what other people think.
   .row
+    .col-xs-4
       h3.info How to Get Started:
-    .col-xs-4.step
-      h4 Step 1
-        p Register and Sign In.  So you can keep track or your surveys and have you own customized dashboard.
-    .col-xs-4.step
-      h4 Step 2
-        p Take A Survey: Take one of the surveys in our library.
-        p -or-
-        p Make A Survey: Make your own survey. Curious to know what people think of something?  Make a survey and find out!
-    .col-xs-4.step
-      h4 Step 3
-        p See your results with graphs and charts.
-        a.btn.btn-primary(href='/register') Register Now.
+      .panel
+        h4 Step 1
+          p Register and Sign In.  So you can keep track or your surveys and have you own customized dashboard.
+    .col-xs-4
+      h3 &nbsp
+      .panel
+        h4 Step 2
+          p Take A Survey: Take one of the surveys in our library.
+          p -or-
+          p Make A Survey: Make your own survey. Curious to know what people think of something?  Make a survey and find out!
+    .col-xs-4
+      h3 &nbsp
+      .panel
+        h4 Step 3
+          p See your results with graphs and charts.
+          a.btn.btn-primary(href='/register') Register Now.
 
