--- a/client/views/surveys/surveys.less
+++ b/client/views/surveys/surveys.less
@@ -1,48 +1,22 @@
-.form{
-  display: inline-block;
-  vertical-align: top;
-  width: 250px;
-  border: 1px solid #111111;
-  border-radius: 5px;
-  margin: 20px;
-  background-color: #DDDDDD;
-
-  button{
-    position: relative;
-    bottom: 2px;
-    text-align: center;
-  }
-
+.head{
+  margin-top: 60px;
 }
-
-.scores{
+#form{
+  h3{
+    font-weight: bold;
+  }
   td{
-    width: 163px;
-    border: #dddddd;
+    border-style: hidden;
     background-color: #f9f9f9;
   }
   td:hover{
     background-color: rgba(112, 111, 111, 0.42);
   }
-}
-
-.head{
-  font-weight: bold;
-}
-
-.radio {
-  display: inline-block;
-  margin-left: 10px;
-}
-
-.buddha{
-  background-color: #FCF91E;
-}
-
-.bozo{
-  background-color: #FC1ED0;
-}
-
-.last{
-  border: 3px solid black;
+  input{
+    display: inline-block;
+    margin-left: 10px;
+  }
+  button{
+    margin-bottom: 5px;
+  }
 }
