--- a/client/index.jade
+++ b/client/index.jade
@@ -4,13 +4,14 @@ html(ng-app='collectivist-app', lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title MEAN Template
+    title Collectivist
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.css', rel='stylesheet')
     link(href='vendor/ng-slider/dist/css/ng-slider.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/views/surveys/surveys.css', rel='stylesheet')
+    link(href='/views/results/results.css', rel='stylesheet')
   body
     include nav
     .container
