--- a/client/views/results/results.less
+++ b/client/views/results/results.less
@@ -35,12 +35,33 @@
   margin-left: 10px;
 }
 
-.buddha{
-  background-color: #FCF91E;
+.table{
+  td{
+    width: 20px;
+    height: 20px;
+  }
+  tr{
+    max-height: 25px;
+  }
+  width: 500px;
 }
 
-.bozo{
-  background-color: #FC1ED0;
+//.poor applies to all cells
+.poor{
+  background-color: red;
+  border: 1px solid black;
+}
+
+.okay{
+  background-color: IndianRed;
+}
+
+.good{
+  background-color: #3D9970;
+}
+
+.great{
+  background-color: #2ECC40;
 }
 
 .last{
