--- a/client/index.jade
+++ b/client/index.jade
@@ -8,6 +8,7 @@ html(ng-app='collectivist-app', lang='en')
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/vendor/toastr/toastr.css', rel='stylesheet')
+    link(href='vendor/ng-slider/dist/css/ng-slider.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/views/surveys/surveys.css', rel='stylesheet')
   body
@@ -20,11 +21,13 @@ html(ng-app='collectivist-app', lang='en')
     script(src='/vendor/jquery/dist/jquery.js')
     script(src='/vendor/angular/angular.js')
     script(src='/vendor/angular-route/angular-route.js')
+    script(src='/vendor/angular-sanitize/angular-sanitize.min.js')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
     script(src='/vendor/underscore/underscore.js')
     script(src='/vendor/toastr/toastr.js')
     script(src='/vendor/localforage/dist/localforage.js')
     script(src='/vendor/angular-localforage/dist/angular-localForage.js')
+    script(src='/vendor/ng-slider/dist/ng-slider.min.js')
     script(src='/config/toastr.js')
     script(src='/index.js')
     script(src='/nav.js')
