--- a/client/views/dashboard/dashboard.jade
+++ b/client/views/dashboard/dashboard.jade
@@ -15,10 +15,16 @@ button.btn-primary(ng-click='mySurveys()') Surveys I've Taken
 
 #mySurveys(ng-show='showMine')
   h3(ng-hide='hideSurveys')  Surveys
-    ul(ng-show='surveys')
-      li(ng-repeat='survey in takenSurveys') {{survey.title}}
-        #viewResults(ng-show='seeResults')
-        a.btn.btn-success(href='/#/results/{{survey._id}}') See Results!
+    table.table.table-hoer(ng-show'surveys')
+      tbody
+        tr(ng-repeat='survey in takenSurveys') {{survey.title}}
+          td {{survey.title}}
+          td#viewResults(ng-show='seeResults')
+          td: a.btn.btn-success(href='/#/results/{{survey._id}}') See Results!
+    //-ul(ng-show='surveys')
+      //-li(ng-repeat='survey in takenSurveys') {{survey.title}}
+        //-#viewResults(ng-show='seeResults')
+        //-a.btn.btn-success(href='/#/results/{{survey._id}}') See Results!
 
 
 
