home page style done

--- a/client/index.less
+++ b/client/index.less
@@ -60,9 +60,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   text-align: center;
 }
 
-h3.info{
-  text-align: center;
-}
 
 th{
   width: 45%;
@@ -79,6 +76,28 @@ th{
   margin-bottom: 15px;
   font-size: 14px;
   font-weight: 200;
+}
+
+.color1{
+  background-color: #a7c170;
+  border-radius: 10px;
+  width: 33%;
+  margin-right: 3px;
+}
+
+.color2{
+  background-color: #f9dc63;
+  height: 115px;
+  border-radius: 10px;
+  width: 33%;
+}
+
+.color3{
+  background-color: #8cc2e5;
+  height: 115px;
+  border-radius: 10px;
+  width: 33%;
+  margin-left: 3px;
 }
 
 p.al, h4{
