--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -1,5 +1,4 @@
 br
-br
 .jumbotron
   .pic
   .row
@@ -9,7 +8,7 @@ br
   .row
     .col-xs-1
     .col-xs-10
-      p The Collectivist is a one of a kind application that is designed to help find where you stand on a variety of topics in relation to other people.
+      p The Collectivist is a one-of-a-kind application that is designed to help find where you stand on a variety of topics in relation to other people.
 
       p In each survey, we ask you for TWO answers for every ONE question: What your opinion is, and what you think the average response is.  This feature enables us to give you accurate results of where you personally stand on a variety of topics, and how accurate you are in guessing what other people think.
 
@@ -21,13 +20,13 @@ br
     .col-xs-1
     .col-xs-10
       .row
-        .col-xs-4
+        .col-xs-4.color1
           h4 Step 1
             p.al Register and Sign In.  So you can keep track or your surveys and have you own customized dashboard.
-        .col-xs-4
+        .col-xs-4.color2
           h4 Step 2
             p.al Take A Survey: Take one of the surveys in our library.
-        .col-xs-4
+        .col-xs-4.color3
           h4 Step 3
             p.al See your results.
     .col-xs-1
