--- a/client/views/surveys/surveys.less
+++ b/client/views/surveys/surveys.less
@@ -125,3 +125,15 @@ h2#completedSurvey {
 .last{
   border: 3px solid black;
 }
+
+.all-surveys {
+  background-color: white;
+}
+
+.intro {
+  display: inline-block;
+}
+
+img {
+  width: 100%;
+}
