--- a/client/views/results/results.jade
+++ b/client/views/results/results.jade
@@ -5,7 +5,7 @@ h1 Results for the {{survey.title}} survey
     .col-xs-6
       #syncScoreTable
         h1 Sync Scores
-        table.table
+        table
           thead
             tr
               th
