--- a/client/views/results/results.less
+++ b/client/views/results/results.less
@@ -35,15 +35,32 @@
   margin-left: 10px;
 }
 
+#syncScoreTable table{
+  width: 500px;
+}
+
 .table{
+  th{
+    width: 20;
+  }
   td{
-    width: 20px;
+    width: 30px;
     height: 20px;
   }
   tr{
     max-height: 25px;
   }
-  width: 500px;
+}
+
+
+table td {
+  width: 30px;
+  height: 30px;
+}
+
+table th {
+  width: 30px;
+  height: 30px;
 }
 
 //.poor applies to all cells
