--- a/client/nav.jade
+++ b/client/nav.jade
@@ -17,5 +17,5 @@
       ul.nav.navbar-nav.navbar-right(ng-show='email')
         li: a(href='/#/') Home
         li: a(href='/#/dashboard') Dashboard
-        li: a(href='/#/logout') {{email}}
+        li: a(href='/#/logout') Logout of {{email}}
 
